refactor(core): 优化插件调用执行器与类加载器实现
- 优化 InvocationExecutor 中熔断器与限流器的实现，使用泛型和并发集合
- 添加调用限流及熔断异常处理逻辑，完善异步调用流程
- 重构 PluginClassLoader 中反射清理缓存的变量定义和访问修饰符
- 为 PluginInstance 添加 Lombok Getter 简化代码
- 优化 PluginManifestLoader 中文件输入流读取方式，改用 NIO Files.newInputStream
- 调整 CircuitBreaker 接口和 SlidingWindowCircuitBreaker 构造函数参数展开对齐格式
- TokenBucketRateLimiter 中 State 改为普通内部类，便于字段访问
- 修正 HostBeanGovernanceProcessor 使用的 AopUtils 引用简化导入
- 规范测试类中集合声明及资源关闭的写法，提升代码健壮性
- 删除部分 changelog 中的待实现特性描述，更新功能状态描述
- 更正注释及代码格式，提升代码可读性和一致性